--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,26 +12,29 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ㅇㅇㅇ" translatesAutoresizingMaskIntoConstraints="NO" id="B3g-fd-hSr">
-                                <rect key="frame" x="87" y="191" width="240" height="128"/>
+                                <rect key="frame" x="20" y="194" width="388" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="9Ld-GR-rmW"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.38039215686274508" green="0.73725490196078436" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="B3g-fd-hSr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="9IQ-0H-k3V"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="B3g-fd-hSr" secondAttribute="bottom" constant="543" id="OvC-UP-iUN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B3g-fd-hSr" secondAttribute="trailing" constant="87" id="XbC-mv-eOf"/>
-                            <constraint firstItem="B3g-fd-hSr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="147" id="gfv-it-Ge1"/>
+                            <constraint firstItem="B3g-fd-hSr" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9QN-rg-CYA"/>
+                            <constraint firstAttribute="trailing" secondItem="B3g-fd-hSr" secondAttribute="trailing" constant="20" id="Um8-QU-hRQ"/>
+                            <constraint firstItem="B3g-fd-hSr" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="efh-Ep-JK2"/>
+                            <constraint firstItem="B3g-fd-hSr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="rZb-OO-Iez"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="374.18478260869568"/>
         </scene>
     </scenes>
     <resources>
