--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/HomeScreen.storyboard
@@ -670,7 +670,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfy-NB-wIW">
-                                <rect key="frame" x="24" y="406" width="366" height="40"/>
+                                <rect key="frame" x="24" y="575" width="366" height="40"/>
                                 <color key="backgroundColor" red="0.5568627451" green="0.62745098040000002" blue="0.81176470590000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="pjM-ez-xKb"/>
@@ -683,31 +683,73 @@
                                     <action selector="memberRegistrationButtonTapped:" destination="1ed-f6-hbT" eventType="touchUpInside" id="tIH-n8-KWu"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="학번" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B57-RS-hKH">
+                                <rect key="frame" x="24" y="430.5" width="366" height="40"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="khj-H8-g7r"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="학번" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oGA-GQ-6Bt">
+                                <rect key="frame" x="30" y="406" width="21" height="14.5"/>
+                                <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <color key="textColor" red="0.44705885649999999" green="0.44705885649999999" blue="0.45098042490000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이름(실명)" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U4Y-QJ-Br7">
+                                <rect key="frame" x="24" y="515" width="366" height="40"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="tD2-Hq-Q2U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름(실명)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4dM-1Y-cj0">
+                                <rect key="frame" x="30" y="490.5" width="52" height="14.5"/>
+                                <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <color key="textColor" red="0.44705885649999999" green="0.44705885649999999" blue="0.45098042490000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="9VD-8M-x1c"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="tqW-Bw-La8" firstAttribute="leading" secondItem="7FM-zC-Z7h" secondAttribute="leading" constant="6" id="0xv-OK-Gcn"/>
-                            <constraint firstItem="bfy-NB-wIW" firstAttribute="top" secondItem="BYp-Bc-xsZ" secondAttribute="bottom" constant="20" id="1TA-EF-EzA"/>
                             <constraint firstItem="BYp-Bc-xsZ" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="3hm-0o-iRD"/>
                             <constraint firstItem="tqW-Bw-La8" firstAttribute="top" secondItem="9VD-8M-x1c" secondAttribute="top" constant="20" id="5f9-Vx-MPr"/>
+                            <constraint firstItem="U4Y-QJ-Br7" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="7nY-h1-Dda"/>
                             <constraint firstItem="loQ-Yq-gLi" firstAttribute="top" secondItem="1ui-ML-dy4" secondAttribute="bottom" constant="10" id="8Pa-l7-q1Q"/>
+                            <constraint firstItem="oGA-GQ-6Bt" firstAttribute="leading" secondItem="B57-RS-hKH" secondAttribute="leading" constant="6" id="9Sp-sH-BlB"/>
                             <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="BYp-Bc-xsZ" secondAttribute="trailing" constant="24" id="9bw-Wv-pTv"/>
                             <constraint firstItem="loQ-Yq-gLi" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="E9v-d4-adD"/>
                             <constraint firstItem="1ui-ML-dy4" firstAttribute="leading" secondItem="loQ-Yq-gLi" secondAttribute="leading" constant="6" id="I3u-cX-YQ9"/>
+                            <constraint firstItem="4dM-1Y-cj0" firstAttribute="top" secondItem="B57-RS-hKH" secondAttribute="bottom" constant="20" id="LmW-Vj-bgO"/>
                             <constraint firstItem="K6z-AF-BGJ" firstAttribute="top" secondItem="Enm-mb-T1M" secondAttribute="bottom" constant="10" id="Rm1-iz-pbA"/>
                             <constraint firstItem="7FM-zC-Z7h" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="SB4-0W-jNs"/>
                             <constraint firstItem="bfy-NB-wIW" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="VqM-iW-b0S"/>
                             <constraint firstItem="Enm-mb-T1M" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="30" id="WwC-u5-dGr"/>
+                            <constraint firstItem="B57-RS-hKH" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="Wzh-d1-Yrl"/>
                             <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="K6z-AF-BGJ" secondAttribute="trailing" constant="24" id="Y8Y-Cg-gqC"/>
+                            <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="B57-RS-hKH" secondAttribute="trailing" constant="24" id="YNa-Hv-wBg"/>
                             <constraint firstItem="1ui-ML-dy4" firstAttribute="top" secondItem="K6z-AF-BGJ" secondAttribute="bottom" constant="20.5" id="Zcf-1q-ptw"/>
+                            <constraint firstItem="bfy-NB-wIW" firstAttribute="top" secondItem="U4Y-QJ-Br7" secondAttribute="bottom" constant="20" id="gFe-YT-ChF"/>
                             <constraint firstItem="7FM-zC-Z7h" firstAttribute="top" secondItem="tqW-Bw-La8" secondAttribute="bottom" constant="10" id="hhb-SV-pga"/>
                             <constraint firstItem="BYp-Bc-xsZ" firstAttribute="top" secondItem="loQ-Yq-gLi" secondAttribute="bottom" constant="4" id="jDd-7w-VwO"/>
                             <constraint firstItem="K6z-AF-BGJ" firstAttribute="leading" secondItem="9VD-8M-x1c" secondAttribute="leading" constant="24" id="lqI-Hd-Kj9"/>
                             <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="7FM-zC-Z7h" secondAttribute="trailing" constant="24" id="m8A-zr-2Dp"/>
+                            <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="U4Y-QJ-Br7" secondAttribute="trailing" constant="24" id="obn-nf-Gdu"/>
                             <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="loQ-Yq-gLi" secondAttribute="trailing" constant="24" id="rkX-B5-clc"/>
                             <constraint firstItem="Enm-mb-T1M" firstAttribute="top" secondItem="7FM-zC-Z7h" secondAttribute="bottom" constant="20" id="sMz-pZ-u3o"/>
+                            <constraint firstItem="B57-RS-hKH" firstAttribute="top" secondItem="oGA-GQ-6Bt" secondAttribute="bottom" constant="10" id="vSq-pu-G2S"/>
+                            <constraint firstItem="4dM-1Y-cj0" firstAttribute="leading" secondItem="U4Y-QJ-Br7" secondAttribute="leading" constant="6" id="vaE-NM-O3f"/>
+                            <constraint firstItem="oGA-GQ-6Bt" firstAttribute="top" secondItem="BYp-Bc-xsZ" secondAttribute="bottom" constant="20" id="weC-1f-MSt"/>
                             <constraint firstItem="9VD-8M-x1c" firstAttribute="trailing" secondItem="bfy-NB-wIW" secondAttribute="trailing" constant="24" id="yVs-di-KPx"/>
+                            <constraint firstItem="U4Y-QJ-Br7" firstAttribute="top" secondItem="4dM-1Y-cj0" secondAttribute="bottom" constant="10" id="yx5-vl-OnL"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="회원가입" id="ECZ-Dz-d7E">
@@ -723,6 +765,8 @@
                         <outlet property="emailTextField" destination="2SY-9o-9WY" id="Dy9-zF-F3U"/>
                         <outlet property="memberRegistrationButton" destination="bfy-NB-wIW" id="28V-oL-Ppc"/>
                         <outlet property="passwordTextField" destination="loQ-Yq-gLi" id="fe6-b6-yiP"/>
+                        <outlet property="studentNumberTextField" destination="B57-RS-hKH" id="3Qe-TT-q7A"/>
+                        <outlet property="userNameTextField" destination="U4Y-QJ-Br7" id="Njb-7S-NeL"/>
                         <segue destination="Rtm-ta-tg8" kind="show" identifier="emailCertification" id="0Pb-cc-gjd"/>
                     </connections>
                 </viewController>
@@ -735,11 +779,11 @@
             <objects>
                 <viewController id="Rtm-ta-tg8" customClass="EmailCertificationViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Vsq-cH-yhO">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4pw-4M-b96">
-                                <rect key="frame" x="24" y="44.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="132.5" width="366" height="40"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dYk-ej-KJO">
                                         <rect key="frame" x="0.0" y="0.0" width="278" height="40"/>
@@ -771,14 +815,14 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIi-fv-2AU">
-                                <rect key="frame" x="30" y="20" width="31.5" height="14.5"/>
+                                <rect key="frame" x="30" y="108" width="31.5" height="14.5"/>
                                 <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.44705885649999999" green="0.44705885649999999" blue="0.45098042490000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HJ4-xb-8ID">
-                                <rect key="frame" x="24" y="114.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="202.5" width="366" height="40"/>
                                 <color key="backgroundColor" red="0.5568627451" green="0.62745098040000002" blue="0.81176470590000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="pqz-lM-MnS"/>
@@ -793,7 +837,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" ! 이메일 인증을 해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7FG-26-nU7">
-                                <rect key="frame" x="24" y="86.5" width="131" height="16"/>
+                                <rect key="frame" x="24" y="174.5" width="131" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
@@ -1482,7 +1526,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0FG-kd-D7x"/>
+        <segue reference="0Pb-cc-gjd"/>
         <segue reference="JcR-VF-5jB"/>
         <segue reference="3XJ-5t-W0x"/>
     </inferredMetricsTieBreakers>
